upload files to amazon s3 bucket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,12 @@ server.tomcat.accesslog.enabled=true
 
 spring.mail.host = smtp.gmail.com
 spring.mail.username = medicappstorage
-spring.mail.password = MedApp112358
+spring.mail.password = 
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.ssl.trust = smtp.gmail.com
+
 
 
 # ===============================
@@ -53,3 +54,17 @@ spring.thymeleaf.cache=false
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.id=ur.id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+
+# ===============================
+# = Amazon S3 configurations
+# ===============================
+jsa.aws.access_key_id=
+jsa.aws.secret_access_key=
+jsa.s3.bucket=medicappstorage
+jsa.s3.region=us-east-1
+jsa.s3.endpointUrl=https://s3.us-east-2.amazonaws.com
+
+# multipart
+multipart.enabled=true
+spring.http.multipart.max-file-size=500000KB
+spring.http.multipart.max-request-size=500000KB
