--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.tomcat.accesslog.enabled=true
 
 spring.mail.host = smtp.gmail.com
 spring.mail.username = medicappstorage
-spring.mail.password = 
+spring.mail.password = MedAppStore314
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
@@ -58,8 +58,8 @@ spring.queries.roles-query=select u.email, r.role from user u inner join user_ro
 # ===============================
 # = Amazon S3 configurations
 # ===============================
-jsa.aws.access_key_id=
-jsa.aws.secret_access_key=
+jsa.aws.access_key_id=AKIAJ6U56KJWBDWMV4OA
+jsa.aws.secret_access_key=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
 jsa.s3.bucket=medicappstorage
 jsa.s3.region=us-east-1
 jsa.s3.endpointUrl=https://s3.us-east-2.amazonaws.com
