--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,7 +62,7 @@ jsa.aws.access_key_id=AKIAJ6U56KJWBDWMV4OA
 jsa.aws.secret_access_key=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
 jsa.s3.bucket=medicappstorage
 jsa.s3.region=us-east-1
-jsa.s3.endpointUrl=https://s3.us-east-2.amazonaws.com
+jsa.s3.endpointUrl=https://s3.amazonaws.com
 
 # multipart
 multipart.enabled=true
